--- a/app/views/_layouts/messages.ejs
+++ b/app/views/_layouts/messages.ejs
@@ -1,9 +1,7 @@
-<div id="messages">
-  <% Object.keys(messages).forEach(function (type) { %>
-    <div class="alert alert-<%= type %>"
+<% Object.keys(messages).forEach(function (type) { %>
+  <div class="alert alert-<%= type %>" role="alert">
     <% messages[type].forEach(function (message) { %>
       <%= message %>
     <% }) %>
-    </div>
-  <% }) %>
-</div>
+  </div>
+<% }) %>
