--- a/app/views/_layouts/messages.ejs
+++ b/app/views/_layouts/messages.ejs
@@ -1,7 +1,7 @@
 <% Object.keys(messages).forEach(function (type) { %>
   <div class="alert alert-<%= type %>" role="alert">
     <% messages[type].forEach(function (message) { %>
-      <%= message %>
+      <%- message %>
     <% }) %>
   </div>
 <% }) %>
