--- a/app/views/admin/add_page.ejs
+++ b/app/views/admin/add_page.ejs
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
       <label for="">Content</label>
-      <textarea class="form-control" type="text" name="content" placeholder="Content"><%= content %></textarea>
+      <textarea id="ta" class="form-control" type="text" name="content" placeholder="Content"><%= content %></textarea>
     </div>
     <button class="btn btn-primary">Submit</button>
   </form>
