--- a/app/views/admin/pages.ejs
+++ b/app/views/admin/pages.ejs
@@ -19,7 +19,7 @@
           <% if (page.slug === 'home') { %> 
             <td></td>
           <% } else { %>
-            <td><a href="/admin/pages/delete-page/<%= page._id %>">Delete</a></td>
+            <td><a data-confirm="Are you sure?" data-method="delete" href="/admin/pages/delete-page/<%= page._id %>">Delete</a></td>
           <% } %>
         </tr>
       <% }) %>
