--- a/app/views/admin/category/edit.ejs
+++ b/app/views/admin/category/edit.ejs
@@ -1,9 +1,10 @@
-<%- include('../_layouts/adminheader') %>
-  <h2 class="page-title">Add Page</h2>
-  <a href="/admin/pages">All pages</a>
+<%- include('../../_layouts/adminheader') %>
+  <h2 class="category-title">Add Category</h2>
+  <a href="/admin/categories">All categories</a>
   <br><br>
 
-  <form method="post" action="/admin/pages/add-page">
+  <form method="post" action="/admin/categories/update/<%= slug %>">
+    <input type="hidden" name="_id" type="hidden" value="<%= _id %>">
     <div class="form-group">
       <label for="">Title</label>
       <input class="form-control" type="text" name="title" value="<%= title %>" placeholder="Title">
@@ -12,11 +13,7 @@
       <label for="">Slug</label>
       <input class="form-control" type="text" name="slug" value="<%= slug %>" placeholder="Slug">
     </div>
-    <div class="form-group">
-      <label for="">Content</label>
-      <textarea id="ta" class="form-control" type="text" name="content" placeholder="Content"><%= content %></textarea>
-    </div>
     <button class="btn btn-primary">Submit</button>
   </form>
 
-<%- include('../_layouts/adminfooter') %>
+<%- include('../../_layouts/adminfooter') %>
