Added category. Refactor

--- a/app/views/admin/category/list.ejs
+++ b/app/views/admin/category/list.ejs
@@ -1,6 +1,6 @@
 <%- include('../../_layouts/adminheader') %>
-  <h2 class="category-title">Pages</h2>
-  <a href="/admin/categories/new">Add category</a>
+  <h2 class="category-title">Categories</h2>
+  <a href="/admin/categories/new">Add new</a>
   <br><br>
 
   <table class="table table-striped">
