--- a/app/views/admin/page/list.ejs
+++ b/app/views/admin/page/list.ejs
@@ -1,6 +1,6 @@
 <%- include('../../_layouts/adminheader') %>
   <h2 class="page-title">Pages</h2>
-  <a href="/admin/pages/new">Add page</a>
+  <a href="/admin/pages/new">Add new</a>
   <br><br>
 
   <table class="table table-striped table-sort">
