Same route for new/create, edit/update

--- a/app/views/admin/category/add.ejs
+++ b/app/views/admin/category/add.ejs
@@ -3,7 +3,7 @@
   <a href="/admin/categories">All Categories</a>
   <br><br>
 
-  <form method="post" action="/admin/categories/create">
+  <form method="post">
     <div class="form-group">
       <label for="">Title</label>
       <input class="form-control" type="text" name="title" value="<%= title %>" placeholder="Title">
