--- a/app/views/admin/page/add.ejs
+++ b/app/views/admin/page/add.ejs
@@ -3,7 +3,7 @@
   <a href="/admin/pages">All pages</a>
   <br><br>
 
-  <form method="post" action="/admin/pages/create">
+  <form method="post">
     <div class="form-group">
       <label for="">Title</label>
       <input class="form-control" type="text" name="title" value="<%= title %>" placeholder="Title">
