--- a/app/views/admin/page/edit.ejs
+++ b/app/views/admin/page/edit.ejs
@@ -3,7 +3,7 @@
   <a href="/admin/pages">All pages</a>
   <br><br>
 
-  <form method="post" action="/admin/pages/update/<%= slug %>">
+  <form method="post">
     <input type="hidden" name="_id" type="hidden" value="<%= _id %>">
     <div class="form-group">
       <label for="">Title</label>
