Added category. Refactor

--- a/app/views/admin/category/list.ejs
+++ b/app/views/admin/category/list.ejs
@@ -15,7 +15,7 @@
       <% categories.forEach((category) => { %>
         <tr id="<%= category.id %>" class="<%= category.slug %>">
           <td><%= category.title %></td>
-          <td><a href="/admin/categories/edit/<%= category.slug %>">Edit</a></td>
+          <td><a href="/admin/categories/edit/<%= category._id %>">Edit</a></td>
           <td><a data-confirm="Are you sure?" data-method="delete" href="/admin/categories/destroy/<%= category._id %>">Delete</a></td>
         </tr>
       <% }) %>
