Refactor. Use _id on edit, update

--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -3,9 +3,8 @@
     <h1>404</h1>
     <hr>
     <pre>
-      Request:
-      Controller: <%= controller %>
-      Action: <%= action %>
+      <b>Request:</b> <%= controller %>#<%= action %>
+      <b>Error:</b> <%= error %>
     </pre>
     <hr>
   </div>
